[package]
name = "mcprobe"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
indicatif = "0.17"
flate2 = "1.0"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
chrono = "0.4"
postgres-native-tls = "0.5"
native-tls = "0.2"
